# tinychat-Qt5

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/tc-qt5/net/: rpc.hpp
include/tc-qt5/ui/: Chat.hpp  Login.hpp
include/tinychat/net/: rpc.hpp
include/tinychat/ui/: chat.hpp  login.hpp
protocol/: chat.proto
src/: main.cpp
src/ui/: Login.cpp  login.cpp
ui/: Chat.ui  Login.ui
